--- a/new-report.html
+++ b/new-report.html
@@ -96,10 +96,15 @@
                     <div id="map-container" style="display: none;"></div>
                     
                     <!-- Send Button -->
-                    <button class="btn btn-primary send-report-btn">
-                        <i data-feather="send"></i>
-                        <span>Send Report</span>
-                    </button>
+                    <div class="send-report-container">
+                        <button class="btn btn-primary send-report-btn">
+                            <i data-feather="send"></i>
+                            <span>Send Report</span>
+                        </button>
+                        <div class="send-feedback" style="display: none;">
+                            <img src="images/sending.gif" alt="Sending..." class="feedback-gif">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
