--- a/new-report.html
+++ b/new-report.html
@@ -88,10 +88,12 @@
                     </div>
                     
                     <!-- Location Information -->
-                    <div class="location-info">
-                        <i data-feather="map-pin"></i>
-                        <span>Current Location: <strong>Loading...</strong></span>
-                        <button class="location-change-btn">Change</button>
+                    <div class="location-info-container">
+                        <div class="location-info">
+                            <i data-feather="map-pin"></i>
+                            <span>Current Location: <strong>Loading...</strong></span>
+                            <button class="location-change-btn">Change</button>
+                        </div>
                     </div>
                     <div id="map-container" style="display: none;"></div>
                     
