--- a/new-report.html
+++ b/new-report.html
@@ -129,11 +129,11 @@
                 <span>New Report</span>
             </a>
             
-            <a href="index.html" class="nav-item" data-tab="rewards">
+            <a href="rewards.html" class="nav-item" data-tab="rewards">
                 <i data-feather="award"></i>
                 <span>Rewards</span>
             </a>
-            <a href="index.html" class="nav-item" data-tab="profile">
+            <a href="profile.html" class="nav-item" data-tab="profile">
                 <i data-feather="user"></i>
                 <span>Profile</span>
             </a>
