--- a/reports.html
+++ b/reports.html
@@ -159,7 +159,7 @@
                 <span>New Report</span>
             </a>
             
-            <a href="index.html" class="nav-item" data-tab="rewards">
+            <a href="rewards.html" class="nav-item" data-tab="rewards">
                 <i data-feather="award"></i>
                 <span>Rewards</span>
             </a>
